# bioregistry-curation-automation

./: .env  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
benchmarks/: compare_curations.py
benchmarks/data/automated/: aacdb.json  absd.json  diabetesomic.json  fanta.json  ferroliganddb.json  funggrowth.json  istransbase.json  kdbirp.json  mibig.json  molgluedb.json  oprlm.json  pahg.json  phagedive.json  pmads.json  psskb.json  rdbsb.json  ribocirc.json  scancerrna.json  streptomedb.json  tsrnadisease.json
benchmarks/data/manual/: aacdb.json  absd.json  diabetesomic.json  fanta.json  ferroliganddb.json  funggrowth.json  istransbase.json  kdbirp.json  mibig.json  molgluedb.json  oprlm.json  pahg.json  phagedive.json  pmads.json  psskb.json  rdbsb.json  ribocirc.json  scancerrna.json  streptomedb.json  tsrnadisease.json
benchmarks/results/: Curation Automation Scoring Report.csv  comparison_results.csv
src/bioregistry_curator/: app.py
src/bioregistry_curator/static/: script.js  style.css
src/bioregistry_curator/templates/: index.html
static/: script.js  style.css
templates/: index.html
